<resources>
    <string name="app_name">Sherbert</string>
    <string name="title_activity_home">home</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
    Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
    enabled for your project, you have a properly configured google-services.json file
    and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="user">user</string>
    <string name="welcome">Welcome back!</string>
    <string name="loggedin">Currently logged in as:</string>
    <string name="signout">Sign out</string>
    <string name="disconnect">Click here to disconnect your account.</string>
    <string name="action_settings">blank</string>
    <string name="title_activity_usersettings">usersettings</string>
    <string name="stats">Your Personal Bests:</string>
    <string name="bench">BENCH</string>
    <string name="squat">SQUAT</string>
    <string name="ohp">CLEAN &amp;\nJERK</string>
    <string name="deadlift">DEADLIFT</string>
    <string name="weight">0Kg</string>
    <string name="large_text">empty</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_home2">home2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_tester">tester</string>

</resources>
